# Yara_project

./: .gitignore  LICENSE
backend/: acs_ace_routes.py  banco.db  dependencies.py  main.py  models.py  pyproject.toml  schemas.py  security.py  ubs_routes.py
backend/alembic/: env.py
backend/alembic/versions/: a2f70de4944c_coluna_usb_para_ubs_da_tabela_agente.py  f4a7ba21a476_criada_as_tabelas_agentes_ubs_e_.py
